[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/enemy64.png" type="Texture" id=1]
[ext_resource path="res://Scenes/FlyerEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31.5 )

[sub_resource type="Animation" id=3]
resource_name = "Move"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -12.0, 0.0, 12.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -12.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Move"

[sub_resource type="AnimationNodeStateMachine" id=6]
states/Move/node = SubResource( 5 )
states/Move/position = Vector2( 621, 141 )
start_node = "Move"

[sub_resource type="AnimationNodeStateMachinePlayback" id=7]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 31, 31.5 )

[node name="FlyerEnemy" type="KinematicBody2D"]
z_index = 5
collision_layer = 8
collision_mask = 32768
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
rotation = -0.20944
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, -31.5 )
shape = SubResource( 1 )

[node name="WallRayCast" type="RayCast2D" parent="."]
position = Vector2( -13.385, -60.078 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Move = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 6 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 7 )

[node name="WanderTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 0, -31.5 )
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 2, 0 )
shape = SubResource( 8 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( 0, -31.5 )
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 2, 0 )
shape = SubResource( 8 )

[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
